--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -6,3 +6,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/c2visualizer
 spring.datasource.username=root
 spring.datasource.password=12qwaszx
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
