--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
-message=Dev message
-spring.datasource.initialization-mode=always
+message=Local message
+spring.datasource.initialization-mode=never
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.platform=mysql
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
@@ -7,3 +7,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/c2visualizer
 spring.datasource.username=root
 spring.datasource.password=12qwaszx
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+wx.appId=wxa1659534fb58d637
+wx.appSecret=be3a37a99539309f26ec31aafedfc862
+
+
+jwt.secret=liminmax
+jwt.expiration=10000
+jwt.tokenHead=Bearer
+jwt.tokenHeader=Authorization
