fix dev profile

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,3 +7,12 @@ spring.datasource.url=jdbc:mysql://mysql:3306/c2visualizer
 spring.datasource.username=root
 spring.datasource.password=root
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+wx.appId=wxa1659534fb58d637
+wx.appSecret=be3a37a99539309f26ec31aafedfc862
+
+
+jwt.secret=liminmax
+jwt.expiration=10000
+jwt.tokenHead=Bearer
+jwt.tokenHeader=Authorization
