--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -135,6 +140,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 	</dependencies>
 	<distributionManagement>
 		<repository>
