--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.datasource.initialization-mode=never
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.platform=mysql
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://mysql:3306/c2visualizer
+spring.datasource.url=jdbc:mysql://localhost:3306/c2visualizer
 spring.datasource.username=root
 spring.datasource.password=ENC(K+nB1TDyDIBJmp/FGF23rA==)
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
